[build-system]
requires = ["setuptools", "setuptools-scm", "winrt-sdk"]
build-backend = "setuptools.build_meta"

[project]
name = "winrt-runtime"
authors = [
    {name = "David Lechner", email = "david@pybricks.com"},
]
description = "Python runtime for Windows Runtime (WinRT) APIs"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Target Audience :: Developers",
]
dynamic = ["version"]
requires-python = ">=3.9,<3.13"

[project.urls]
# Homepage = "https://github.com/pywrint/pywrinrt"
# Documentation = "https://readthedocs.org"
Repository = "https://github.com/pywrint/pywrinrt"
Changelog = "https://github.com/pywinrt/pywinrt/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.cibuildwheel]
# use local winrt-sdk build dependency
environment = { PYTHONPATH="../winrt-sdk/src" }
# don't install winrt-sdk from PyPI
build-frontend = "build; args: --skip-dependency-check --no-isolation"
# don't build for PyPy
skip = "pp*"

[tool.cibuildwheel.windows]
archs = ["x86", "AMD64", "ARM64"]
